--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
                     <p>Esperamos compartir este día tan especial contigo</p>
                 </div>
                 
-                <a href="juliocervera42@gmail.com" class="rsvp-btn">
+                <a href="mailto:juliocervera42@gmail.com" class="rsvp-btn">
                     Confirmar Asistencia
                 </a>
                 
