check mesa de regalos

--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                     <p>Tu presencia es el mejor regalo que podríamos recibir</p>
                     <p>Sin embargo, si deseas hacernos un obsequio, hemos preparado una mesa de regalos en:</p>
                     
-                    <a href="https://www.liverpool.com.mx" class="gift-link" target="_blank">
+                    <a href="https://mesaderegalos.liverpool.com.mx/milistaderegalos/51750416" class="gift-link" target="_blank">
                         <i class="fas fa-store"></i> Liverpool - Mesa de Regalos
                     </a>
                 </div>
