--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
         
         header {
             background: linear-gradient(rgba(85, 107, 47, 0.8), rgba(85, 107, 47, 0.8)),
-                        url('https://images.unsplash.com/photo-1519225421980-715cb0215aed?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');
+                        url('cinthyajuliogibli.jpeg');
             background-size: cover;
-            background-position: center;
-            height: 100vh;
+            background-position: center 30%;
+            height: 120vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
