--- a/invite_v2.html
+++ b/invite_v2.html
@@ -558,12 +558,12 @@
                         <h4>Recepción</h4>
                         
                         <p>
-                            <a href="https://www.google.com/maps/place/Vo+Garden/@21.1142766,-101.5863809,17z/data=!3m1!4b1!4m6!3m5!1s0x842bbdc4295899db:0x87084366f6875542!8m2!3d21.1142766!4d-101.5863809!16s%2Fg%2F11lc9kz9g2?entry=ttu&g_ep=EgoyMDI1MTAyMi4wIKXMDSoASAFQAw%3D%3D" class="address-link" target="_blank">
+                            <a href="$RECEPTION_ADDRESS$" class="address-link" target="_blank">
                                 <i class="fas fa-map-marker-alt"></i> Salón VO Garden
                             </a>
                         </p>
                         <p>
-                            <a href="https://www.google.com/maps?q=Templo+de+San+Patricio,+Blvd.+Guanajuato+3410,+Residencial+Punta+del+Este,+37296+Le%C3%B3n+de+los+Aldama,+Gto.&ftid=0x842bbc2bc1877207:0xf4da89528fc0beae&entry=gps&lucs=,94284469,94224825,94227247,94227248,94231188,47071704,47069508,94218641,94282134,94203019,47084304,94286863&g_ep=CAISEjI1LjI5LjEuNzgyOTg1OTc1MBgAIIgnKmwsOTQyODQ0NjksOTQyMjQ4MjUsOTQyMjcyNDcsOTQyMjcyNDgsOTQyMzExODgsNDcwNzE3MDQsNDcwNjk1MDgsOTQyMTg2NDEsOTQyODIxMzQsOTQyMDMwMTksNDcwODQzMDQsOTQyODY4NjNCAk1Y&skid=b31dd816-c1fa-4957-b7a5-02f265882d6c&g_st=iw" class="address-link" target="_blank">
+                            <a href="$RECEPTION_ADDRESS$" class="address-link" target="_blank">
                                 <i class="fas fa-address-card"></i> Robin Americano & Calle de la Espátula, Fraccionamiento Paraíso Real
                             </a>
                         </p>
