new changes added

--- a/index.html
+++ b/index.html
@@ -543,10 +543,8 @@
         <section id="ceremony">
             <div class="container">
                 <div class="section-title">
-                    <h2>Nuestra Boda</h2>
-                    <p>Nos uniremos en matrimonio ante el osito bimbo y nuestros seres queridos</p>
-                </div>
-                
+                    <p>Acompáñanos a celebrar nuestra boda y ser testigo de nuestra unión. </p>
+                </div>                
                 <div class="event-details">
                     <div class="event-card animate-on-scroll slide-up">
                         <i class="fas fa-church"></i>
