new image added

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         /* ESTILOS DEL FOOTER ACTUALIZADOS PARA SER IGUAL AL HEADER */
         footer {
             background: linear-gradient(rgba(85, 107, 47, 0.8), rgba(85, 107, 47, 0.8)),
-                        url('cinthyajuliogibli.jpeg'); /* Misma imagen que el header */
+                        url('cinthyajulio_vidareal.jpeg'); /* Misma imagen que el header */
             background-size: cover;
             background-position: center 30%; /* Misma posición que el header */
             color: white; /* Texto blanco para el fondo oscuro */
