new image added great 2

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                         url('cinthyajuliogibli.jpeg');
             background-size: cover;
             background-position: center 30%;
+            height: 100vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
