sobre linea gruesa

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             width: 100%;
             height: 50%;
             background-color: transparent;
-            border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+            border-bottom: 7px solid rgba(0, 0, 0, 0.15);
             transform-origin: top;
             transition: transform 1.5s ease;
         }
@@ -642,7 +642,7 @@
                 <div class="child-free-content animate-on-scroll slide-up">
                     <p>Queremos que disfruten y bailen sin parar, es por ello que hemos decidido celebrar nuestra boda </p>
                     <h2>Sin Niños</h2>                      
-                    <p>Esperamos que esta sea una oportunidad para que disfrutes de una noche sin preocupaciones.</p>
+                    <p>Deseamos que esta sea una oportunidad para que gocen de una noche sin preocupaciones.</p>
                     <p>¡Agradecemos su comprensión!</p>                      
                 </div>
             </div>
@@ -655,7 +655,7 @@
                     <div class="section-icon">
                         <i class="fas fa-gift" style="color: white;"></i>
                     </div>
-                    <p>Tu presencia es el mejor regalo que podríamos recibir</p>
+                    <p>Tu presencia es el mejor regalo que podríamos recibir.</p>
                     <p>Sin embargo, si deseas hacernos un obsequio, te damos las siguentes opciones:</p>                 
                     <a href="https://mesaderegalos.liverpool.com.mx/milistaderegalos/51750416" class="gift-link" target="_blank">
                         <i class="fas fa-store"></i> Liverpool - Mesa de Regalos
@@ -673,11 +673,11 @@
                 </div>
                 
                 <a href="mailto:juliocervera42@gmail.com" class="rsvp-btn">
-                    Confirmar Asistencia
+                    CONFIRMAR ASISTENCIA
                 </a>
                 
                 <p style="margin-top: 40px; font-size: 0.9rem;">
-                    Por favor confirmar antes del 1 de diciembre de 2025
+                    Por favor confirmar antes del 20 de Noviembre de 2025.
                 </p>
             </div>
         </footer>
