add bank account

--- a/index.html
+++ b/index.html
@@ -664,13 +664,10 @@
                             Si prefieres realizar un obsequio en efectivo, puedes hacerlo mediante transferencia bancaria:
                         </p>
                         <p style="font-weight: 500;">
-                            **Banco:** [NOMBRE DEL BANCO]
+                            Banco: BBVA
                         </p>
                         <p style="font-weight: 500;">
-                            **Cuenta:** [NÚMERO DE CUENTA]
-                        </p>
-                        <p style="font-weight: 500;">
-                            **CLABE:** [NÚMERO CLABE]
+                            Cuenta: 0468000328
                         </p>
                         <p style="font-size: 0.9rem; margin-top: 15px;">
                             *Asegúrate de poner tu nombre en el concepto.*
