--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         .countdown-box {
             background-color: rgba(255, 255, 255, 0.1); 
             backdrop-filter: blur(8px); 
-            color: var(--secondary-color); /* Color principal: Verde Olivo Claro */
+            color: white; /* Color principal: Verde Olivo Claro */
             padding: 30px 20px; 
             border-radius: 5px; 
             min-width: 100px;
@@ -266,7 +266,7 @@
             text-transform: uppercase;
             letter-spacing: 3px; 
             font-weight: 500;
-            color: var(--verde-clarito); /* Etiqueta en un verde más clarito */
+            color:white;; /* Etiqueta en un verde más clarito */
             margin-top: 10px;
         }
         /* ************************************************* */
