--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
                         <i class="fas fa-gift" style="color: white;"></i>
                     </div>
                     <p>Tu presencia es el mejor regalo que podríamos recibir.</p>
-                    <p>Sin embargo, si deseas hacernos un obsequio, te damos las siguentes opciones:</p>
+                    <p>Sin embargo, si deseas hacernos un obsequio, te damos las siguientes opciones:</p>
                     
                     <a href="https://mesaderegalos.liverpool.com.mx/milistaderegalos/51750416" class="gift-link" target="_blank">
                         <i class="fas fa-store"></i> Liverpool - Mesa de Regalos
@@ -739,7 +739,7 @@
                             <i class="fas fa-credit-card"></i> Transferencia
                         </h5>
                         <p>
-                            Si prefieres realizar un obsequio en efectivo, puedes hacerlo mediante transferencia bancaria:
+                            Si prefieres realizar un obsequio en efectivo, puedes hacerlo mediante una transferencia bancaria:
                         </p>
                         <p style="font-weight: 500;">
                             Banco: BBVA
