--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
                     <div class="section-title" style="margin-top: 0; margin-bottom: 30px;">
                         <h2>Dress Code</h2> 
                     </div> 
-                    <img src="dresscode_final.jpeg" alt="Información de código de vestimenta: tonos y reglas" class="dress-code-image">
+                    <img src="dresscode_cyj.jpeg" alt="Información de código de vestimenta: tonos y reglas" class="dress-code-image">
                 </div>
             </div>
         </section>
