--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
         /* ESTILOS DEL FOOTER ACTUALIZADOS PARA SER IGUAL AL HEADER */
         footer {
             background: linear-gradient(rgba(85, 107, 47, 0.8), rgba(85, 107, 47, 0.8)),
-                        url('cinthyajulio_vidareal.jpeg'); 
+                        url('julio_cinthya_real.jpeg'); 
             background-size: cover;
             background-position: center 30%; 
             color: white; 
