--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         
         /* Resto de Estilos - [CÓDIGO OMITIDO POR BREVEDAD] */
         section {
-            padding: 30px 0;
+            padding: 10px 0;
             text-align: center;
             background-color: var(--light-color); 
         }
@@ -768,7 +768,7 @@
                 </a>
                 
                 <p style="margin-top: 40px; font-size: 0.9rem;">
-                    Por favor confirma antes del 20 de Noviembre de 2025.
+                    Por favor, confirma antes del 20 de Noviembre de 2025.
                 </p>
             </div>
         </footer>
