--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
                 </a>
                 
                 <p style="margin-top: 40px; font-size: 0.9rem;">
-                    Por favor, confirma antes del 30 de Noviembre de 2025.
+                    Por favor, confirma antes del 5 de Diciembre de 2025.
                 </p>
             </div>
         </footer>
