--- a/index.html
+++ b/index.html
@@ -825,10 +825,10 @@
             const now = new Date().getTime();
             const distance = weddingDate - now;
             
-            const days = Math.floor(distance / (1000 * 60 * 60 * 24));
-            const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-            const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+            const days = 0;
+            const hours = 0;
+            const minutes = 0;
+            const seconds = 0;
             
             document.getElementById("days").innerHTML = days.toString().padStart(2, "0");
             document.getElementById("hours").innerHTML = hours.toString().padStart(2, "0");
